-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: port-stage-aarch32-8, port-stage-aarch32-9
-
Component/s: hotspot
-
None
-
aarch32
-
linux
some parts of code patching implementation of aarch32 port produce undefined behavior since replace ARM instructions which are not guaranteed to be correctly executed by CPU during patching
in addition, the Atomic implementation for jlong data types are not really atomic since use ordinary means of accessing the memory, which are not guaranteed to be atomic on 32-bit ARM CPUs
in addition, the Atomic implementation for jlong data types are not really atomic since use ordinary means of accessing the memory, which are not guaranteed to be atomic on 32-bit ARM CPUs