8161482: aarch32: nativeInstruction atomicity and correctness of patching Reviewed-by: aph Contributed-by: Anton Kozlov <akozlov@azul.com>